# old-norse-dictionary-py

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: coverage.yml  lint.yml  publish.yml  type-hints.yml  unit-test.yml
src/old_norse_dictionary/: __init__.py  dictionary.py  reader.py
src/template/: adder.py
tests/: test_adder.py  test_dictionary.py
